# beats

./: .bazelrc  .editorconfig  .gitignore  .nogo.json  .travis.yml  BUILD.bazel  CHANGELOG-developer.next.asciidoc  CHANGELOG.asciidoc  CHANGELOG.next.asciidoc  Jenkinsfile  Makefile  Makefile.bazel  NOTICE.txt  Vagrantfile  WORKSPACE  glide.yaml  go.mod  go.sum  magefile.go  repositories.bzl
.github/: CODEOWNERS
auditbeat/: BUILD.bazel  Makefile  auditbeat.reference.yml  docker-compose.yml  magefile.go
auditbeat/cmd/: BUILD.bazel  root.go
auditbeat/core/: BUILD.bazel
auditbeat/datastore/: BUILD.bazel
auditbeat/docs/: fields.asciidoc
auditbeat/fields/: fields.beat.go
auditbeat/helper/hasher/: BUILD.bazel
auditbeat/include/: BUILD.bazel  fields.go  list.go
auditbeat/module/auditd/: BUILD.bazel  fields.module.go
auditbeat/module/file_integrity/: BUILD.bazel  fields.module.go  fileinfo_test.go
auditbeat/scripts/mage/: BUILD.bazel  config.go  docs.go  fields.go  package.go  test.go  update.go
auditbeat/testing/: BUILD.bazel
dev-tools/mage/: BUILD.bazel  check.go  common.go  crossbuild.go  dashboard.go  docs.go  fields.go  fmt.go  integtest.go  kibana.go  modules.go  pkgspecs.go  pytest.go  settings.go
dev-tools/mage/gotool/: BUILD.bazel
dev-tools/mage/kubernetes/: BUILD.bazel
dev-tools/packaging/: BUILD.bazel
filebeat/: BUILD.bazel  Makefile  filebeat.reference.yml  magefile.go
filebeat/beat/: spooler.go
filebeat/beater/: BUILD.bazel  filebeat.go
filebeat/channel/: BUILD.bazel  runner.go
filebeat/cmd/: BUILD.bazel
filebeat/config/: BUILD.bazel  config.go
filebeat/docs/: fields.asciidoc
filebeat/fileset/: BUILD.bazel
filebeat/generator/: BUILD.bazel
filebeat/generator/fields/: BUILD.bazel
filebeat/generator/fileset/: BUILD.bazel
filebeat/generator/module/: BUILD.bazel
filebeat/harvester/: BUILD.bazel  log.go
filebeat/include/: BUILD.bazel  fields.go
filebeat/input/: BUILD.bazel
filebeat/input/container/: BUILD.bazel
filebeat/input/default-inputs/: BUILD.bazel
filebeat/input/docker/: BUILD.bazel
filebeat/input/file/: BUILD.bazel
filebeat/input/kafka/: BUILD.bazel
filebeat/input/log/: BUILD.bazel
filebeat/input/mqtt/: BUILD.bazel
filebeat/input/redis/: BUILD.bazel
filebeat/input/stdin/: BUILD.bazel
filebeat/input/syslog/: BUILD.bazel
filebeat/input/tcp/: BUILD.bazel
filebeat/input/udp/: BUILD.bazel
filebeat/input/unix/: BUILD.bazel
filebeat/input/v2/: BUILD.bazel
filebeat/input/winlog/: BUILD.bazel
filebeat/inputsource/: BUILD.bazel
filebeat/inputsource/common/: BUILD.bazel
filebeat/inputsource/tcp/: BUILD.bazel
filebeat/inputsource/udp/: BUILD.bazel
filebeat/inputsource/unix/: BUILD.bazel
filebeat/module/apache/: BUILD.bazel
filebeat/module/apache2/: BUILD.bazel
filebeat/module/auditd/: BUILD.bazel
filebeat/module/elasticsearch/: BUILD.bazel
filebeat/module/haproxy/: BUILD.bazel
filebeat/module/icinga/: BUILD.bazel
filebeat/module/iis/: BUILD.bazel
filebeat/module/kafka/: BUILD.bazel
filebeat/module/kibana/: BUILD.bazel
filebeat/module/logstash/: BUILD.bazel
filebeat/module/mongodb/: BUILD.bazel
filebeat/module/mysql/: BUILD.bazel
filebeat/module/nats/: BUILD.bazel
filebeat/module/nginx/: BUILD.bazel
filebeat/module/osquery/: BUILD.bazel
filebeat/module/postgresql/: BUILD.bazel
filebeat/module/redis/: BUILD.bazel
filebeat/module/santa/: BUILD.bazel
filebeat/module/system/: BUILD.bazel
filebeat/module/traefik/: BUILD.bazel
filebeat/processor/add_kubernetes_metadata/: BUILD.bazel
filebeat/registrar/: BUILD.bazel
filebeat/scripts/mage/: BUILD.bazel  config.go  docs.go  fields.go  package.go  test.go  update.go
filebeat/scripts/tester/: BUILD.bazel
filebeat/tests/files/: BUILD.bazel
heartbeat/beater/: BUILD.bazel
heartbeat/cmd/: BUILD.bazel  root.go
heartbeat/config/: BUILD.bazel
heartbeat/eventext/: BUILD.bazel
heartbeat/hbtest/: BUILD.bazel
heartbeat/hbtestllext/: BUILD.bazel
heartbeat/look/: BUILD.bazel
heartbeat/monitors/: BUILD.bazel
heartbeat/monitors/active/: BUILD.bazel
heartbeat/monitors/defaults/: BUILD.bazel
heartbeat/monitors/jobs/: BUILD.bazel
heartbeat/monitors/stdfields/: BUILD.bazel
heartbeat/monitors/wrappers/: BUILD.bazel
heartbeat/scheduler/: BUILD.bazel
heartbeat/scheduler/schedule/: BUILD.bazel
heartbeat/scheduler/timerqueue/: BUILD.bazel
heartbeat/watcher/: BUILD.bazel
journalbeat/beater/: BUILD.bazel
journalbeat/cmd/: BUILD.bazel
journalbeat/cmd/instance/: BUILD.bazel
journalbeat/input/: BUILD.bazel  input.go
metricbeat/: BUILD.bazel  Makefile  magefile.go  metricbeat.reference.yml
metricbeat/beater/: BUILD.bazel
metricbeat/cmd/: BUILD.bazel
metricbeat/cmd/test/: BUILD.bazel
metricbeat/docs/: fields.asciidoc  modules_list.asciidoc
metricbeat/docs/modules/: coredns.asciidoc  system.asciidoc
metricbeat/helper/: BUILD.bazel
metricbeat/helper/dialer/: BUILD.bazel
metricbeat/helper/elastic/: BUILD.bazel
metricbeat/helper/labelhash/: BUILD.bazel
metricbeat/helper/prometheus/: BUILD.bazel
metricbeat/helper/server/: BUILD.bazel
metricbeat/helper/socket/: BUILD.bazel
metricbeat/helper/sql/: BUILD.bazel
metricbeat/include/: BUILD.bazel  fields.go  list.go
metricbeat/include/fields/: BUILD.bazel
metricbeat/mb/: BUILD.bazel
metricbeat/mb/module/: BUILD.bazel
metricbeat/mb/parse/: BUILD.bazel
metricbeat/mb/testing/: BUILD.bazel
metricbeat/module/: BUILD.bazel
metricbeat/module/aerospike/: BUILD.bazel
metricbeat/module/apache/: BUILD.bazel
metricbeat/module/beat/: BUILD.bazel
metricbeat/module/ceph/: BUILD.bazel
metricbeat/module/consul/: BUILD.bazel
metricbeat/module/couchbase/: BUILD.bazel
metricbeat/module/couchdb/: BUILD.bazel
metricbeat/module/docker/: BUILD.bazel
metricbeat/module/dropwizard/: BUILD.bazel
metricbeat/module/elasticsearch/: BUILD.bazel
metricbeat/module/envoyproxy/: BUILD.bazel
metricbeat/module/etcd/: BUILD.bazel
metricbeat/module/golang/: BUILD.bazel  expvar.go
metricbeat/module/graphite/: BUILD.bazel
(+1362 files in other folders)
