load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/elastic/beats/v7/auditbeat",
    visibility = ["//visibility:private"],
    deps = [
        "//auditbeat/cmd:go_default_library",
        "//auditbeat/include:go_default_library",
    ],
)

go_binary(
    name = "auditbeat",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//auditbeat/cmd:go_default_library",
        "//libbeat/tests/system/template:go_default_library",
    ],
)
