load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/elastic/beats/v7/filebeat",
    visibility = ["//visibility:private"],
    deps = [
        "//filebeat/cmd:go_default_library",
        "//filebeat/input/default-inputs:go_default_library",
    ],
)

go_binary(
    name = "filebeat",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//filebeat/cmd:go_default_library",
        "//filebeat/input/default-inputs:go_default_library",
        "//libbeat/cmd:go_default_library",
        "//libbeat/tests/system/template:go_default_library",
    ],
)
