load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

exports_files(["metricbeat.yml"])

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/elastic/beats/v7/metricbeat",
    visibility = ["//visibility:private"],
    deps = ["//metricbeat/cmd:go_default_library"],
)

go_binary(
    name = "metricbeat",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

# The filename of the executable produced by a go_binary rule is unpredictable
# so copy the binary well known name for tests.
# Alternatively we could pass "$(execpath //metricbeat:metricbeat)" in args to
# py_test, but then you need a custom _main_ to handle the args.
genrule(
    name = "normalized_binary",
    srcs = [":metricbeat"],
    outs = ["metricbeat.test"],
    cmd = "cp $(SRCS) $@",
    visibility = ["//metricbeat:__subpackages__"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//libbeat/tests/system/template:go_default_library",
        "//metricbeat/cmd:go_default_library",
    ],
)
