load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["eventmod.go"],
    importpath = "github.com/elastic/beats/v7/auditbeat/core",
    visibility = ["//visibility:public"],
    deps = [
        "//libbeat/common:go_default_library",
        "//metricbeat/mb:go_default_library",
    ],
)
