load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["datastore.go"],
    importpath = "github.com/elastic/beats/v7/auditbeat/datastore",
    visibility = ["//visibility:public"],
    deps = [
        "//libbeat/paths:go_default_library",
        "@io_etcd_go_bbolt//:go_default_library",
    ],
)
