load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "build.go",
        "check.go",
        "clean.go",
        "common.go",
        "config.go",
        "copy.go",
        "crossbuild.go",
        "dashboard.go",
        "dmgbuilder.go",
        "dockerbuilder.go",
        "docs.go",
        "fields.go",
        "fmt.go",
        "godaemon.go",
        "gomod.go",
        "gotest.go",
        "install.go",
        "integtest.go",
        "integtest_docker.go",
        "integtest_mage.go",
        "keychain.go",
        "kibana.go",
        "modules.go",
        "pkg.go",
        "pkgdeps.go",
        "pkgspecs.go",
        "pkgtypes.go",
        "platforms.go",
        "pytest.go",
        "settings.go",
    ],
    importpath = "github.com/elastic/beats/v7/dev-tools/mage",
    visibility = ["//visibility:public"],
    deps = [
        "//dev-tools/mage/gotool:go_default_library",
        "//libbeat/common/file:go_default_library",
        "//libbeat/processors/dissect:go_default_library",
        "@com_github_joeshaw_multierror//:go_default_library",
        "@com_github_josephspurrier_goversioninfo//:go_default_library",
        "@com_github_jstemmer_go_junit_report//formatter:go_default_library",
        "@com_github_jstemmer_go_junit_report//parser:go_default_library",
        "@com_github_magefile_mage//mg:go_default_library",
        "@com_github_magefile_mage//sh:go_default_library",
        "@com_github_magefile_mage//target:go_default_library",
        "@com_github_mitchellh_hashstructure//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@org_golang_x_tools//go/vcs:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "common_test.go",
        "keychain_test.go",
        "pkg_test.go",
        "platforms_test.go",
    ],
    data = glob(["testdata/**"]) + ["//dev-tools/packaging:packaging_data"],
    embed = [":go_default_library"],
    # TODO: The packaging tests seem to have an issue running under Bazel.
    # Might be due to the symlinked sandbox runtime.
    tags = ["manual"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)
