load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "acker.go",
        "channels.go",
        "crawler.go",
        "filebeat.go",
        "signalwait.go",
        "store.go",
    ],
    importpath = "github.com/elastic/beats/v7/filebeat/beater",
    visibility = ["//visibility:public"],
    deps = [
        "//filebeat/autodiscover/builder/hints:go_default_library",
        "//filebeat/channel:go_default_library",
        "//filebeat/config:go_default_library",
        "//filebeat/fileset:go_default_library",
        "//filebeat/include:go_default_library",
        "//filebeat/input:go_default_library",
        "//filebeat/input/file:go_default_library",
        "//filebeat/input/v2:go_default_library",
        "//filebeat/input/v2/compat:go_default_library",
        "//filebeat/processor/add_kubernetes_metadata:go_default_library",
        "//filebeat/registrar:go_default_library",
        "//libbeat/autodiscover:go_default_library",
        "//libbeat/beat:go_default_library",
        "//libbeat/cfgfile:go_default_library",
        "//libbeat/common:go_default_library",
        "//libbeat/common/acker:go_default_library",
        "//libbeat/common/cfgwarn:go_default_library",
        "//libbeat/common/reload:go_default_library",
        "//libbeat/esleg/eslegclient:go_default_library",
        "//libbeat/logp:go_default_library",
        "//libbeat/management:go_default_library",
        "//libbeat/monitoring:go_default_library",
        "//libbeat/outputs/elasticsearch:go_default_library",
        "//libbeat/paths:go_default_library",
        "//libbeat/processors/decode_csv_fields:go_default_library",
        "//libbeat/publisher/pipetool:go_default_library",
        "//libbeat/statestore:go_default_library",
        "//libbeat/statestore/backend/memlog:go_default_library",
        "@com_github_elastic_go_concert//unison:go_default_library",
        "@com_github_mitchellh_hashstructure//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["acker_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//filebeat/input/file:go_default_library",
        "//libbeat/beat:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
