load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "github.com/elastic/beats/v7/filebeat/config",
    visibility = ["//visibility:public"],
    deps = [
        "//libbeat/autodiscover:go_default_library",
        "//libbeat/cfgfile:go_default_library",
        "//libbeat/common:go_default_library",
        "//libbeat/common/cfgwarn:go_default_library",
        "//libbeat/logp:go_default_library",
        "//libbeat/paths:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["config_test.go"],
    data = [
        "//filebeat/tests/files:config_files",
        "//filebeat/tests/files:log_files",
    ],
    embed = [":go_default_library"],
    deps = [
        "//libbeat/cfgfile:go_default_library",
        "//libbeat/common:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
