load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "forwarder.go",
        "harvester.go",
        "registry.go",
        "source.go",
        "util.go",
    ],
    importpath = "github.com/elastic/beats/v7/filebeat/harvester",
    visibility = ["//visibility:public"],
    deps = [
        "//libbeat/beat:go_default_library",
        "//libbeat/common/match:go_default_library",
        "//libbeat/logp:go_default_library",
        "@com_github_gofrs_uuid//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["util_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//libbeat/common/match:go_default_library",
        "//libbeat/logp:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
