load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "fields.go",
        "list.go",
    ],
    importpath = "github.com/elastic/beats/v7/filebeat/include",
    visibility = ["//visibility:public"],
    deps = [
        "//filebeat/input/container:go_default_library",
        "//filebeat/input/docker:go_default_library",
        "//filebeat/input/kafka:go_default_library",
        "//filebeat/input/log:go_default_library",
        "//filebeat/input/mqtt:go_default_library",
        "//filebeat/input/redis:go_default_library",
        "//filebeat/input/stdin:go_default_library",
        "//filebeat/input/syslog:go_default_library",
        "//filebeat/input/tcp:go_default_library",
        "//filebeat/input/udp:go_default_library",
        "//filebeat/module/apache:go_default_library",
        "//filebeat/module/auditd:go_default_library",
        "//filebeat/module/elasticsearch:go_default_library",
        "//filebeat/module/haproxy:go_default_library",
        "//filebeat/module/icinga:go_default_library",
        "//filebeat/module/iis:go_default_library",
        "//filebeat/module/kafka:go_default_library",
        "//filebeat/module/kibana:go_default_library",
        "//filebeat/module/logstash:go_default_library",
        "//filebeat/module/mongodb:go_default_library",
        "//filebeat/module/mysql:go_default_library",
        "//filebeat/module/nats:go_default_library",
        "//filebeat/module/nginx:go_default_library",
        "//filebeat/module/osquery:go_default_library",
        "//filebeat/module/postgresql:go_default_library",
        "//filebeat/module/redis:go_default_library",
        "//filebeat/module/santa:go_default_library",
        "//filebeat/module/system:go_default_library",
        "//filebeat/module/traefik:go_default_library",
        "//libbeat/asset:go_default_library",
    ],
)
