load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "errors.go",
        "input.go",
        "plugin.go",
        "registry.go",
        "runnerfactory.go",
    ],
    importpath = "github.com/elastic/beats/v7/filebeat/input",
    visibility = ["//visibility:public"],
    deps = [
        "//filebeat/channel:go_default_library",
        "//filebeat/config:go_default_library",
        "//filebeat/input/file:go_default_library",
        "//filebeat/registrar:go_default_library",
        "//libbeat/beat:go_default_library",
        "//libbeat/cfgfile:go_default_library",
        "//libbeat/common:go_default_library",
        "//libbeat/common/cfgwarn:go_default_library",
        "//libbeat/logp:go_default_library",
        "//libbeat/monitoring:go_default_library",
        "//libbeat/plugin:go_default_library",
        "//libbeat/publisher/pipeline:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "input_test.go",
        "registry_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//filebeat/channel:go_default_library",
        "//libbeat/common:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
