load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "migrate.go",
        "registrar.go",
    ],
    importpath = "github.com/elastic/beats/v7/filebeat/registrar",
    visibility = ["//visibility:public"],
    deps = [
        "//filebeat/config:go_default_library",
        "//filebeat/input/file:go_default_library",
        "//libbeat/common/file:go_default_library",
        "//libbeat/logp:go_default_library",
        "//libbeat/monitoring:go_default_library",
        "//libbeat/paths:go_default_library",
        "//libbeat/statestore:go_default_library",
        "//libbeat/statestore/backend:go_default_library",
        "//libbeat/statestore/backend/memlog:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["migrate_bench_test.go"],
    embed = [":go_default_library"],
    deps = select({
        "@io_bazel_rules_go//go/platform:android": [
            "//filebeat/input/file:go_default_library",
            "//libbeat/common/file:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//filebeat/input/file:go_default_library",
            "//libbeat/common/file:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//filebeat/input/file:go_default_library",
            "//libbeat/common/file:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//filebeat/input/file:go_default_library",
            "//libbeat/common/file:go_default_library",
        ],
        "//conditions:default": [],
    }),
)
