load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "github.com/elastic/beats/v7/heartbeat/config",
    visibility = ["//visibility:public"],
    deps = [
        "//libbeat/autodiscover:go_default_library",
        "//libbeat/common:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["config_test.go"],
    embed = [":go_default_library"],
)
