load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["eventext.go"],
    importpath = "github.com/elastic/beats/v7/heartbeat/eventext",
    visibility = ["//visibility:public"],
    deps = [
        "//libbeat/beat:go_default_library",
        "//libbeat/common:go_default_library",
    ],
)
