load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["look.go"],
    importpath = "github.com/elastic/beats/v7/heartbeat/look",
    visibility = ["//visibility:public"],
    deps = [
        "//heartbeat/reason:go_default_library",
        "//libbeat/common:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["look_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//heartbeat/reason:go_default_library",
        "//libbeat/common:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
