load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "scheduler.go",
    ],
    importpath = "github.com/elastic/beats/v7/heartbeat/scheduler",
    visibility = ["//visibility:public"],
    deps = [
        "//heartbeat/scheduler/timerqueue:go_default_library",
        "//libbeat/common/atomic:go_default_library",
        "//libbeat/logp:go_default_library",
        "//libbeat/monitoring:go_default_library",
        "@org_golang_x_sync//semaphore:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["scheduler_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//libbeat/common/atomic:go_default_library",
        "//libbeat/monitoring:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
