load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "input.go",
    ],
    importpath = "github.com/elastic/beats/v7/journalbeat/input",
    visibility = ["//visibility:public"],
    deps = [
        "//journalbeat/checkpoint:go_default_library",
        "//journalbeat/pkg/journalfield:go_default_library",
        "//journalbeat/pkg/journalread:go_default_library",
        "//journalbeat/reader:go_default_library",
        "//libbeat/beat:go_default_library",
        "//libbeat/common:go_default_library",
        "//libbeat/common/acker:go_default_library",
        "//libbeat/common/fmtstr:go_default_library",
        "//libbeat/logp:go_default_library",
        "//libbeat/processors:go_default_library",
        "//libbeat/processors/add_formatted_index:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["input_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//libbeat/beat:go_default_library",
        "//libbeat/beat/events:go_default_library",
        "//libbeat/common:go_default_library",
        "//libbeat/processors:go_default_library",
        "//libbeat/processors/actions:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
